# ComfyUI-DeepFuze

./: .gitignore  LICENSE.txt  README.md  __init__.py  audio_playback.py  install.py  llm_node.py  nodes.py  pyproject.toml  requirements.txt  run.py  tts_generation.py  utils.py
.github/: FUNDING.yml
TTS/tts/: lipsync.key
Workflows/: DeepFuze_FaceSwap.json  DeepFuze_FaceSwapping.json  DeepFuze_Lipsync.json  DeepFuze_VoiceCloning_LipSync_FaceSwap.json  DeepFuze_VoiceClonning.json  DeepFuze_VoiceClonning_Lipsync.json  FaceSwapping.json  VoiceCloning+Lipsync.json  VoiceCloning+Openai+Lipsync+FaceSwap.json  VoiceCloning+Openai.json  VoiceCloning.json
deepfuze/: __init__.py  audio.py  choices.py  config.py  content_analyser.py  core.py  download.py  execution.py  face_analyser.py  face_helper.py  face_masker.py  face_store.py  ffmpeg.py  filesystem.py  globals.py  installer.py  logger.py  memory.py  metadata.py  normalizer.py  process_manager.py  statistics.py  vision.py  voice_extractor.py
js/: cte_advanced.js  dynamicPrompt.js  extended_widgets.js  gptSampler.js  include_css.js  preview_audio.js  styles.css  videoLoadAdvanced.js  videoSave.js
tests/: test_audio.py  test_cli_face_debugger.py  test_cli_face_enhancer.py  test_cli_face_swapper.py  test_cli_frame_colorizer.py  test_cli_frame_enhancer.py  test_cli_lip_syncer.py  test_common_helper.py  test_config.py  test_download.py  test_execution.py  test_face_analyser.py  test_ffmpeg.py  test_filesystem.py  test_memory.py  test_normalizer.py  test_process_manager.py  test_vision.py  test_wording.py
(+37 files in other folders)
